// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a full section correctly 1`] = `
<section
  className="components-form-section-m__container-full components-form-section-m__container"
>
  <div
    id="child"
  />
</section>
`;

exports[`should render a narrow section correctly 1`] = `
<section
  className="components-form-section-m__container-narrow components-form-section-m__container"
>
  <div
    id="child"
  />
</section>
`;

exports[`should render a very wide section correctly 1`] = `
<section
  className="components-form-section-m__container-verywide components-form-section-m__container"
>
  <div
    id="child"
  />
</section>
`;

exports[`should render a wide section correctly 1`] = `
<section
  className="components-form-section-m__container-wide components-form-section-m__container"
>
  <div
    id="child"
  />
</section>
`;
